--- a/index.html
+++ b/index.html
@@ -66,34 +66,34 @@
                         <div class="columns">
                             <div class="card">
                                 <div id="day1" class="card-content">
-                                    <h3 id="date1">Day 1</h3>
-                                    <img src="#">
-                                    <h4 id="temp1">Temp: </h4>
-                                    <h4 id="hum1">Humidity: </h4>
+                                    <h3 id="date1"></h3>
+                                    <img id="icon1" src="">
+                                    <h4 id="temp1"></h4>
+                                    <h4 id="hum1"></h4>
                                 </div>
                                 <div id="day2" class="card-content">
-                                    <h3 id="date2">Day 2</h3>
-                                    <img src="#">
-                                    <h4 id="temp2">Temp: </h4>
-                                    <h4 id="hum2">Humidity: </h4>
+                                    <h3 id="date2"></h3>
+                                    <img id="icon2" src="">
+                                    <h4 id="temp2"></h4>
+                                    <h4 id="hum2"></h4>
                                 </div>
                                 <div id="day3" class="card-content">
-                                    <h3 id="date3">Day 3</h3>
-                                    <img src="#">
-                                    <h4 id="temp3">Temp: </h4>
-                                    <h4 id="hum3">Humidity: </h4>
+                                    <h3 id="date3"></h3>
+                                    <img id="icon3" src="">
+                                    <h4 id="temp3"></h4>
+                                    <h4 id="hum3"></h4>
                                 </div>
                                 <div id="day4" class="card-content">
-                                    <h3 id="date4">Day 4</h3>
-                                    <img src="#">
-                                    <h4 id="temp4">Temp: </h4>
-                                    <h4 id="hum4">Humidity: </h4>
+                                    <h3 id="date4"></h3>
+                                    <img id="icon4" src="">
+                                    <h4 id="temp4"></h4>
+                                    <h4 id="hum4"></h4>
                                 </div>
                                 <div id="day5" class="card-content">
-                                    <h3 id="date5">Day 5</h3>
-                                    <img src="#">
-                                    <h4 id="temp5">Temp: </h4>
-                                    <h4 id="hum5">Humidity: </h4>
+                                    <h3 id="date5"></h3>
+                                    <img id="icon5" src="">
+                                    <h4 id="temp5"></h4>
+                                    <h4 id="hum5"></h4>
                                 </div>
                             </div>
                         </div>
